--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <script src="js/dependencies/bootstrap.min.js"></script>
 <script src="js/dependencies/jquery.jkey.min.js"></script>
 
+<script src="js/dependencies/zip/zip.js"></script>
+<script src="js/dependencies/zip/inflate.js"></script>
+<script src="js/dependencies/zip/zip-ext.js"></script>	
+
+
 </head>
 <body>
 
@@ -39,7 +44,7 @@
 	<i class="icon-arrow-left"></i></button>
 	
 	<span id="appTitle" class="applicationBarTitle">
-	<b>Sample app</b>
+	<b>Unknown application</b>
 	</span>
 
 	<span id="appRuntimeActions">
@@ -74,7 +79,7 @@
 <ul id="tabBar" class="nav nav-tabs" style="">
 <!--Monitoring-->
 <li class="active" id="tabProfiling"><a data-toggle="tab">Monitor</a></li>
-	<div id="tabProfilingTabs" class="tabButtonGroup" data-toggle="buttons-radio">
+	<div id="tabProfilingTabs" class="tabButtonGroup" >
 	<li><button id="tabProfilingTabGraph" class="btn tabButton">Time graph</button></li>
 	<li><button id="tabMonitorTabMemory" class="btn tabButton">Memory</button></li>
 	<li><button id="tabProfilingTabThreads" class="btn tabButton">Tasks</button></li>
@@ -152,7 +157,6 @@
 
 <!--Options-->
 <div id="optionsView" class="dontShowAtStart">
-<form>
 	<h4>Connection</h4>
 	<label class="checkbox">
 	<input id="optionsAutoconnect" type="checkbox"/>
@@ -163,14 +167,53 @@
 	Periodically probe for a running application.
 	</label>
 
-	
-	<!--<h4><br>Extensions</h4>   
-    <div class="row-fluid">
-    <ul id="optionsExtensions" class="span4 unstyled">
-    <li>View: a simple something <a><i class="icon-remove" title="remove"></i></a></li>
+	<!-- extensions -->
+	<h4><br>Extension packages</h4> 
+	<div id="optionsExtensionsSearchBar" 
+		class="input-prepend input-append" style="margin-left:1px;">
+		<span class="add-on"><i class="icon-search"></i></span>
+		<input id="" type="text" value=""/>
+
+		<div class="btn-group">
+		<button class="btn"
+			title="Search for a package in the installed packages">
+			Search</button>
+		<button class="btn dropdown-toggle" data-toggle="dropdown" 
+			title="Add a new package">
+			Add new 
+			<span class="caret"></span>
+		</button>
+		<ul class="dropdown-menu">
+			<li><a id="optionsExtensionsNew">Choose file..</a></li>
+			<li><a id="optionsExtensionsNewUrl">Enter url..</a></li>
+		</ul>
+		</div>
+	</div>
+	<div id="optionsExtensionsUrlBar" 
+		class="dontShowAtStart">
+		<div class="input-prepend input-append" style="margin-left:1px;">
+		<button id="optionsExtensionsUrlBack" class="btn">
+			<i class="icon-arrow-left"></i></button>
+		<input id="optionsExtensionsUrl" class="span8" type="text" value="" 
+			placeholder="e.g. http://github.com/gamedevwebtools/package-sample-hello-world/zipball/master"/>
+		<button class="btn" id="optionsExtensionsUrlGet">
+			Download</button>
+		</div>
+		<div id="optionsExtensionsUrlWarn" 
+			class="alert alert-error dontShowAtStart">
+			<strong>Warning!</strong>
+			Some browsers don't allow download requests when gamedevwebtools 
+			is working directly from the filesystem (file://...).<br/>
+			Therefore, Download button will open the link in a new tab, and
+			you will have to add the downloaded zip file manually with the choose file option.
+		</div>
+	</div>
+	<input id="optionsExtensionNewFile" type="file" accept="application/zip" style="opacity:0;"/>
+	<div class="well well-small overflowWidget">
+    <ul id="optionsExtensions" class="unstyled">
+		<li><h5>You don't have any extension packages installed :(</h5></li>
     </ul>
     </div>
-	<a>Add a new extension</a>-->
 	
 	
 	<!--
@@ -189,21 +232,20 @@
 	<button class="btn" type="button">Export data(TODO)</button>-->
 	
 
-</form>
 </div>
 
 <!--help-->
 <div id="helpView" class="dontShowAtStart">
 	<h4>Introduction</h4>
-	<p>A set browser based tools for game development.</p>
+	<p>A set of browser based tools for game development.</p>
 	
 	<h4>Tool usage</h4>
 	<ul>
 		<li><b>Play/Pause button:</b> activates/deactivates the application.</li>
 		<li><b>Power button:</b> shuts down the application.</li>
 		<li><b>Keyboard button:</b> when it is enabled, 
-		the browser sends the keyboard input to the application. </li>
-		<li><b>Console:</b> click on the console to enabled javascript input.
+		the browser sends the keyboard input to the application.</li>
+		<li><b>Console:</b> click on the console to enable input of javascript code.
 		To send a message to the application type <code>
 		application.send('message')</code> or <code>
 		application.send('message',{value:'Hello world!'})</code></li>
@@ -231,10 +273,18 @@
 </div>
 
 <!--Load the application-->
+<script src="js/core/core.js"></script>
+<script src="js/core/browserFeatures.js"></script>
+<script src="js/application/packageManager.js"></script>
 <script src="js/main.js"></script>
 <script src="js/ui/components.js"></script>
 <script src="js/ui/graphView.js"></script>
 <script src="js/ui/taskThreadView.js"></script>
+<script src="js/ui/sizeBar.js"></script>
+<script src="js/tools/keyboardButton.js"></script>
+<script src="js/tools/fpsCounter.js"></script>
+<script src="js/tools/console.js"></script>
+<script src="js/tools/monitoring.js"></script>
 <script src="js/ui/ui.js"></script>
 
 </body>
